--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -10,6 +10,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
 }
 
 .navbar__hamburger__menu {
@@ -50,6 +51,7 @@
     text-decoration: none;
     color: black;
     font-weight: 600;
+    cursor: pointer;
 }
 
 @media only screen and (max-width: 768px) {
