update membuat formulir login

--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,9 @@
   font-family: "Sourcer Sans 3", sans-serif;
   box-sizing: border-box;
 }
+
+body {
+  display: flex;
+  flex-direction: column;
+  height: 1000vh;
+}
