--- a/src/components/ShowLogin/ShowLogin.css
+++ b/src/components/ShowLogin/ShowLogin.css
@@ -145,6 +145,9 @@
 }
 
 @media only screen and (max-width: 768px) {
+    .login__form {
+        height: 75%;
+    }
     .login__form .login__nav h1 {
         font-size: var(--font-size-large);
     }
