--- a/src/components/ShowLogin/ShowLogin.css
+++ b/src/components/ShowLogin/ShowLogin.css
@@ -21,8 +21,7 @@
     justify-content: space-between;
     align-items: center;
     flex-direction: row;
-    position: absolute;
-    top: 0;
+
     padding: 16px;
 }
 
@@ -37,7 +36,7 @@
     position: relative;
     min-width: 270px;
     width: 35%;
-    height: 90%;
+    height: fit-content;
     box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
     padding: 16px;
     display: flex;
@@ -146,7 +145,7 @@
 
 @media only screen and (max-width: 768px) {
     .login__form {
-        height: 75%;
+        height: fit-content;
     }
     .login__form .login__nav h1 {
         font-size: var(--font-size-large);
