--- a/src/pages/Register/Register.css
+++ b/src/pages/Register/Register.css
@@ -10,7 +10,7 @@
     position: relative;
     min-width: 270px;
     width: 40%;
-    height: 100%;
+    height: fit-content;
     box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
     padding: 16px;
     display: flex;
