--- a/src/components/ShowLogin/ShowLogin.css
+++ b/src/components/ShowLogin/ShowLogin.css
@@ -21,16 +21,25 @@
     justify-content: space-between;
     align-items: center;
     flex-direction: row;
+    padding-block: 16px;
+}
 
-    padding: 16px;
+.login__nav > div > button {
+    background-color: transparent;
 }
 
 .login__nav .x__button {
+    position: relative;
+    right: -30px;
+    bottom: 0;
     cursor: pointer;
-    font-size: 1.5rem;
-    background-color: white;
+    padding: 4px;
+    font-size: var(--font-size-large);
+    background-color: transparent;
     color: black;
 }
+
+
 
 .login__form {
     position: relative;
@@ -110,7 +119,8 @@
 }
 
 .login__form button {
-    padding: 4px;
+    padding-inline: 32px;
+    padding-block: 8px;
     width: 100%;
     outline: none;
     border: none;
@@ -129,7 +139,8 @@
     justify-content: center;
     align-items: center;
     gap: 10px;
-    padding: 4px;
+    padding-inline: 32px;
+    padding-block: 8px;
     font-size: var(--font-size-medium);
     border: 1px solid black;
 }
@@ -147,6 +158,11 @@
     .login__form {
         height: fit-content;
     }
+
+    .login__form p {
+        font-size: var(--font-size-small)
+    }
+
     .login__form .login__nav h1 {
         font-size: var(--font-size-large);
     }
