--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,10 +1,37 @@
 .footer {
-    background-color: var(--secondary-color);
-    height: 298px;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    color: var(--quartenary-color);
+  background-color: var(--secondary-color);
+  display: grid;
+  grid-template-areas:
+    "logo office sosmed"
+    "copyright copyright copyright";
+  grid-template-columns: 2fr 3fr 1fr;
+  grid-template-rows: 1fr;
+  color: var(--quartenary-color);
+  padding-inline: 128px;
+  padding-block: 16px;
+  column-gap: 32px;
+  row-gap: 16px;
 }
-.footer div {
-    border: 2px solid black;
+
+
+.footer-logo {
+    grid-area: logo;
+}
+.footer-office {
+    grid-area: office;
+}
+.footer-office h3 {
+  margin-bottom: 12px;
+}
+.footer-office p {
+  line-height: 1.25;
+}
+.footer-office p:nth-child(2) {
+  margin-bottom: 12px;
+}
+.footer-sosmed {
+    grid-area: sosmed;
+}
+.footer-copyright {
+    grid-area: copyright;
 }
