--- a/src/pages/DetailCourse/DetailCourse.css
+++ b/src/pages/DetailCourse/DetailCourse.css
@@ -1,6 +1,5 @@
 .detail__course__hero {
     width: 100%;
-    border: 2px solid red;
 }
 
 .detail__course__hero .detail__course__background {
@@ -15,7 +14,6 @@
     color: var(--tertiary-color);
     text-align: center;
     grid-area: title;
-    border: 2px solid white;
 }
 
 .detail__course__hero .detail__course__title h2 {
@@ -29,8 +27,9 @@
 }
 
 .detail__course__content {
-    border: 2px solid blue;
     padding-inline: 64px;
+    width: 100%;
+    border: 2px solid red;
     position: relative;
     top: -350px;
     display: grid;
@@ -39,18 +38,15 @@
     grid-template-areas: 
                 "title title"
                 "video buy" ;
-    border: 2px solid white;
-    row-gap: 32px;
+    row-gap: 86px;
     column-gap: 64px;
-    height: 850px;
+    height: 950px;
 }
 
 .detail__course__content .detail__course__video {
     width: 750px;
     height: 400px;
-    background-color: blue;
     grid-area: video;
-    border: 2px solid white;
 
 }
 
@@ -60,26 +56,64 @@
     background-color: var(--secondary-color);
     border-radius: 5px;
     grid-area: buy;
-    border: 2px solid white;
     place-self: end;
     display: flex;
     flex-direction: column;
+    padding: 8px;
+}
+
+.detail__course__content .detail__course__buy .benefit {
+    display: flex;
+    border: 2px solid red;
+    flex-wrap: wrap;
+    column-gap: 16px;
+    row-gap: 8px;
+    justify-content: space-between;
 }
 
 .detail__course__content .detail__course__buy .benefit div {
     width: 80px;
-    height: 80px;
+    text-align: center;
+    border: 2px solid black;
+}
+
+.detail__course__content .detail__course__buy .benefit div p {
+    margin-top: 8px;
+    font-weight: 600;
+}
+
+
+.detail__course__content .detail__course__buy .rating__and__category {
+    display: flex;
+    width: 50%;
+    border: 2px solid white;
+    margin-top: 8px;
+    justify-content: space-between;
+}
+
+.detail__course__content .detail__course__buy .rating__and__category .star {
+    display: flex;
+    gap: 4px;
+    justify-content: center;
+    align-items: center;
+}
+
+.detail__course__content .detail__course__buy .rating__and__category p {
+    font-weight: 600;
+}
+
+.detail__course__content .detail__course__buy .rating__and__category .category p:last-child {
+    color: var(--quartenary-color)
 }
 
 .detail__course__description {
-    border: 4px solid red;
     width: 750px;
     border-radius: 5px;
 }
 
 .detail__course__description .btn__description__section {
     background-color: var(--quartenary-color);
-    padding: 4px;
+    padding: 8px;
 }
 
 .btns {
@@ -88,7 +122,7 @@
     column-gap: 12px;
 }   
 
-.detail__course__description .btn__description__section .btns button{
+.detail__course__description .btn__description__section .btns button:nth-child(1){
     background-color: var(--secondary-color);
     border: none;
     width: 100px;
@@ -97,6 +131,19 @@
     font-size: var(--font-size-medium);
     color: var(--primary-color);
     font-weight: 700;
+    cursor: pointer;
+}
+
+button {
+    background-color: var(--quartenary-color);
+    border: none;
+    width: 100px;
+    height: 35px;
+    border-radius: 5px;
+    font-size: var(--font-size-medium);
+    color: var(--primary-color);
+    font-weight: 700;
+    cursor: pointer;
 }
 
 .detail__course__description .detail__description__section {
